[package]
name = "source-demo-tool"
version = "0.4.2"
edition = "2021"
authors = ["Brett 'xNWP' Anthony <nwpbusiness@gmail.com>"]
description = "WIP: a library for opening (editing planned) source engine demo files."
readme = "README.md"
license = "MIT"
repository = "https://github.com/xNWP/source-demo-tool/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
buf_redux = "0.8.4"
source-demo-tool-impl-proc-macros = { path = "impl-proc-macros", version = "0.3.0" }

[workspace]