[package]
name = "source-demo-tool-impl-proc-macros"
version = "0.3.1"
edition = "2021"
authors = ["Brett 'xNWP' Anthony <nwpbusiness@gmail.com>"]
description = "implementation details for source-demo-tool, DO NOT USE DIRECTLY."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.23"
syn = { version = "1.0.107", features = ["extra-traits"] }
proc-macro2 = "1.0.49"

[lib]
proc-macro = true